更新测试类